Added a basic dashbaord page with layout

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,3 +1,7 @@
 @import "./style-partials/resets";
 @import "./style-partials/utilities";
 @import "./style-partials/variables";
+
+body {
+	background-color: $bg-color;
+}
