--- a/frontend/src/pages/DashboardPage/DashboardPage.scss
+++ b/frontend/src/pages/DashboardPage/DashboardPage.scss
@@ -7,6 +7,7 @@
 	.features-container {
 		@include size(100%, 100%);
 		display: grid;
+		grid-template: repeat(4, minmax(0, 1fr)) / repeat(4, minmax(0, 1fr));
 		grid-template-areas:
 			"total-pastes top-authors tags-diagram tags-diagram"
 			"total-pastes top-authors tags-diagram tags-diagram"
