--- a/frontend/src/style-partials/_presets.scss
+++ b/frontend/src/style-partials/_presets.scss
@@ -13,4 +13,5 @@
 	border-radius: 5px;
 	background-color: $feature-color;
 	box-shadow: 0 0 10px 2px rgba($color: #000000, $alpha: 0.4);
+	overflow: hidden;
 }
