--- a/frontend/src/components/TopAuthors/TopAuthors.scss
+++ b/frontend/src/components/TopAuthors/TopAuthors.scss
@@ -2,4 +2,18 @@
 
 .top-authors {
 	@include feature;
+	h4 {
+		margin-bottom: 0.5em;
+		font-size: 2.2rem;
+		font-weight: bold;
+		text-align: center;
+	}
+	p {
+		margin: 0.5em 0;
+		width: 100%;
+		text-align: left;
+		.author {
+			font-weight: bold;
+		}
+	}
 }
