--- a/frontend/src/components/Paste/Paste.scss
+++ b/frontend/src/components/Paste/Paste.scss
@@ -4,7 +4,7 @@
 	font-size: 1.2rem;
 	background-color: white;
 	border-bottom: 1px solid gray;
-	padding: 1.2em 1.7em;
+	padding: 1.3em 1.5em;
 	.header {
 		@include flex(row, space-between, center);
 	}
@@ -14,17 +14,24 @@
 		text-transform: capitalize;
 	}
 	.metadata {
+		@include flex(row, flex-start, center);
 		font-size: 1rem;
-	}
-	.author {
-		font-weight: bold;
+		.author {
+			font-weight: bold;
+		}
+		.expand {
+			margin-left: 0.7em;
+			font-size: 1.55rem;
+			cursor: pointer;
+		}
 	}
 	.content {
-		border-top: 1px solid lightgray;
-		margin-top: 1em;
-		padding-top: 0.5em;
-		transition: 0.4s ease-in-out;
+		transition: height 0.5s ease-in-out, margin-top 0.5s ease-in-out;
 		overflow: hidden;
+		line-height: 1.3;
+		&.open {
+			margin-top: 1.2em;
+		}
 	}
 	&:nth-of-type(1) {
 		border-top-left-radius: 4px;
