--- a/frontend/src/components/Paste/Paste.scss
+++ b/frontend/src/components/Paste/Paste.scss
@@ -4,16 +4,30 @@
 	font-size: 1.2rem;
 	background-color: white;
 	border-bottom: 1px solid gray;
-	padding: 1.3em 1.5em;
+	padding: 1.1em 1.4em;
 	.header {
 		@include flex(row, space-between, center);
 	}
-	.title {
-		font-weight: bold;
-		font-size: 1.4rem;
+	.caption {
+		@include flex(column, flex-start, flex-start);
 		text-transform: capitalize;
+		.title {
+			font-weight: bold;
+			font-size: 1.4rem;
+		}
+		.tags {
+			margin-top: 9px;
+			@include flex(row, flex-start, center);
+			column-gap: 15px;
+			.tag {
+				font-size: 0.9rem;
+				border-radius: 9px;
+				background-color: rgb(230, 230, 230);
+				padding: 0.25em 0.45em;
+			}
+		}
 	}
-	.metadata {
+	.info {
 		@include flex(row, flex-start, center);
 		font-size: 1rem;
 		.author {
@@ -26,7 +40,7 @@
 		}
 	}
 	.content {
-		transition: height 0.5s ease-in-out, margin-top 0.5s ease-in-out;
+		transition: height 0.4s ease-in-out, margin-top 0.4s ease-in-out;
 		overflow: hidden;
 		line-height: 1.3;
 		&.open {
@@ -34,12 +48,12 @@
 		}
 	}
 	&:nth-of-type(1) {
-		border-top-left-radius: 4px;
-		border-top-right-radius: 4px;
+		border-top-left-radius: 5px;
+		border-top-right-radius: 5px;
 	}
 	&:last-of-type {
 		border-bottom: 0;
-		border-bottom-left-radius: 4px;
-		border-bottom-right-radius: 4px;
+		border-bottom-left-radius: 5px;
+		border-bottom-right-radius: 5px;
 	}
 }
