--- a/frontend/src/pages/DashboardPage/DashboardPage.scss
+++ b/frontend/src/pages/DashboardPage/DashboardPage.scss
@@ -6,6 +6,7 @@
 	@include page;
 	.features-container {
 		@include size(100%, 100%);
+		gap: 25px;
 		display: grid;
 		grid-template: repeat(4, minmax(0, 1fr)) / repeat(6, minmax(0, 1fr));
 		grid-template-areas:
