--- a/frontend/src/style-partials/_variables.scss
+++ b/frontend/src/style-partials/_variables.scss
@@ -1,3 +1,4 @@
-$navbar-height: 100px;
+$navbar-height: 80px;
 $bg-color: rgb(26, 25, 39);
-$feature-color: rgb(58, 62, 94);
+$feature-color: rgb(90, 96, 133);
+$navbar-second-color: rgb(253, 170, 184);
