--- a/frontend/src/pages/DashboardPage/DashboardPage.scss
+++ b/frontend/src/pages/DashboardPage/DashboardPage.scss
@@ -4,6 +4,7 @@
 
 .dashboard-page {
 	@include page;
+	height: calc(100vh - $navbar-height);
 	.features-container {
 		@include size(100%, 100%);
 		gap: 25px;
