--- a/frontend/src/style-partials/_variables.scss
+++ b/frontend/src/style-partials/_variables.scss
@@ -2,3 +2,4 @@ $navbar-height: 80px;
 $bg-color: rgb(26, 25, 39);
 $feature-color: rgb(90, 96, 133);
 $navbar-second-color: rgb(253, 170, 184);
+$paste-color: rgb(245, 245, 245);
