--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -56,7 +56,7 @@
 		.notifications-container {
 			position: absolute;
 			background-color: lightgray;
-			border-radius: 8px;
+			border-radius: 6px;
 			font-size: 0.9rem;
 			right: 0;
 			margin-top: 0.9em;
@@ -65,6 +65,7 @@
 			.notification {
 				padding: 1em;
 				border-bottom: 1px solid gray;
+				white-space: pre-line;
 				&:last-of-type {
 					border-bottom: 0;
 				}
