Made Navbar responsive

--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -10,7 +10,7 @@
 	background-color: $feature-color;
 	font-size: 2rem;
 	font-weight: bold;
-	padding: 0.5em 1.5em;
+	padding: 0.5em 1.2em;
 	box-shadow: 0 0 10px 1px black;
 	.links {
 		@include flex(row, flex-start, center);
@@ -73,3 +73,25 @@
 		}
 	}
 }
+
+@media only screen and (max-width: $mobile-width), (max-height: $tablet-height) {
+	.navbar {
+		padding: 0.5em 0.6em;
+		font-size: 1.7rem;
+		height: $navbar-height-small;
+		.links {
+			column-gap: 15px;
+		}
+	}
+}
+
+// @media only screen and (max-height: $tablet-height) {
+// 	.navbar {
+// 		padding: 0.5em 0.6em;
+// 		font-size: 1.7rem;
+// 		height: $navbar-height-small;
+// 		.links {
+// 			column-gap: 15px;
+// 		}
+// 	}
+// }
