--- a/frontend/src/style-partials/_variables.scss
+++ b/frontend/src/style-partials/_variables.scss
@@ -1,4 +1,9 @@
+$mobile-width: 600px;
+$tablet-height: 800px;
+
 $navbar-height: 80px;
+$navbar-height-small: 65px;
+
 $bg-color: rgb(26, 25, 39);
 $feature-color: rgb(90, 96, 133);
 $navbar-second-color: rgb(253, 170, 184);
