Bug fix - no notifications for offline scrapes

--- a/frontend/src/style-partials/_presets.scss
+++ b/frontend/src/style-partials/_presets.scss
@@ -28,3 +28,7 @@
 		padding: 0.5em;
 	}
 }
+
+@mixin card-box-shadow {
+	box-shadow: 0 12px 28px 0 rgba(0, 0, 0, 0.2), 0 2px 4px 0 rgba(0, 0, 0, 0.1);
+}
