--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -1,5 +1,6 @@
 @import "../../style-partials/variables";
 @import "../../style-partials/utilities";
+@import "../../style-partials/presets";
 
 .navbar {
 	@include flex(row, space-between, center);
@@ -60,8 +61,9 @@
 			font-size: 0.9rem;
 			right: 0;
 			margin-top: 0.9em;
-			width: 200px;
+			width: 300px;
 			color: black;
+			@include card-box-shadow;
 			.notification {
 				padding: 1em;
 				border-bottom: 1px solid gray;
