--- a/frontend/src/components/Paste/Paste.scss
+++ b/frontend/src/components/Paste/Paste.scss
@@ -19,11 +19,12 @@
 		.tags {
 			margin-top: 9px;
 			@include flex(row, flex-start, center);
-			column-gap: 15px;
+			column-gap: 10px;
 			.tag {
 				font-size: 0.9rem;
 				border-radius: 9px;
-				background-color: rgb(220, 220, 220);
+				border: 1px solid rgb(190, 190, 190);
+				background-color: rgb(215, 215, 215);
 				padding: 0.25em 0.45em;
 			}
 		}
