--- a/frontend/src/style-partials/_variables.scss
+++ b/frontend/src/style-partials/_variables.scss
@@ -1,10 +1,11 @@
 $mobile-width: 600px;
+$mobile-height-landscape: 450px;
 
 $tablet-height: 800px;
 $tablet-width: 1250px;
 
 $navbar-height: 80px;
-$navbar-height-small: 65px;
+$navbar-height-small: 60px;
 
 $bg-color: rgb(26, 25, 39);
 $feature-color: rgb(90, 96, 133);
