--- a/frontend/src/components/TotalPastes/TotalPastes.scss
+++ b/frontend/src/components/TotalPastes/TotalPastes.scss
@@ -23,3 +23,11 @@
 		}
 	}
 }
+
+@media only screen and (orientation: landscape) and (max-height: $mobile-height-landscape) {
+	.total-pastes {
+		.count {
+			font-size: 1.9rem;
+		}
+	}
+}
