--- a/frontend/src/style-partials/_presets.scss
+++ b/frontend/src/style-partials/_presets.scss
@@ -9,9 +9,13 @@
 		margin-top: $navbar-height-small;
 		padding: 1.2em;
 	}
+	@media only screen and (max-width: $tablet-width) {
+		margin-top: $navbar-height-small;
+		padding: 1.5em;
+	}
 	@media only screen and (max-width: $mobile-width) {
 		margin-top: $navbar-height-small;
-		padding: 0.8em;
+		padding: 0.7em;
 	}
 	@media only screen and (orientation: landscape) and (max-height: $mobile-height-landscape) {
 		margin-top: $navbar-height-small;
