--- a/frontend/src/style-partials/_variables.scss
+++ b/frontend/src/style-partials/_variables.scss
@@ -11,3 +11,5 @@ $bg-color: rgb(26, 25, 39);
 $feature-color: rgb(90, 96, 133);
 $navbar-second-color: rgb(253, 170, 184);
 $paste-color: rgb(245, 245, 245);
+
+$pretty-blue: rgb(71, 112, 255);
