--- a/frontend/src/components/Paste/Paste.scss
+++ b/frontend/src/components/Paste/Paste.scss
@@ -11,9 +11,10 @@
 	}
 	.title {
 		text-transform: capitalize;
+		overflow-wrap: break-word;
 		font-weight: bold;
 		font-size: 1.4rem;
-		width: 50%;
+		width: 45%;
 		flex-shrink: 0;
 		flex-wrap: wrap;
 	}
@@ -25,6 +26,7 @@
 		font-size: 1rem;
 		.author {
 			font-weight: bold;
+			overflow-wrap: break-word;
 		}
 		.time-ago {
 			flex-wrap: wrap;
@@ -86,10 +88,10 @@
 
 @media only screen and (max-width: $mobile-width) {
 	.paste {
-		padding: 0.75em 0.5em;
+		padding: 0.7em 0.45em;
 		font-size: 0.95rem;
 		.title {
-			font-size: 1rem;
+			font-size: 0.95rem;
 		}
 		.info {
 			font-size: 0.7rem;
